<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".carListing.presentation.details.CarDetailsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/details_image_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/_150sdp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_details_call_dealer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_image_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:alpha="0.5"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_car" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title">

                <TextView
                    android:id="@+id/txt_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/txt_mileage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/view_1"
                android:layout_width="match_parent"
                android:layout_height="0.9dp"
                android:alpha="0.4"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/string_vehicle_info"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:alpha="0.5"
                    android:text="@string/string_location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txt_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:alpha="0.5"
                    android:text="@string/string_exterior_color"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txt_ext_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:weightSum="1"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:layout_weight="0.4"
                    android:text="@string/string_interior_color"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txt_int_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_weight="0.6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:layout_weight="0.4"
                    android:text="@string/string_driver_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txt_driver_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_weight="0.6"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:layout_weight="0.4"
                    android:text="@string/string_transmission"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txt_transmission"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_weight="0.6"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:layout_weight="0.4"
                    android:text="@string/string_body_style"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txt_body_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text=""
                    android:layout_weight="0.6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:layout_weight="0.4"
                    android:text="@string/string_engine"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txt_engine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text=""
                    android:layout_weight="0.6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:layout_weight="0.4"
                    android:text="@string/string_fuel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txt_fuel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text=""
                    android:layout_weight="0.6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:alpha="0.4"
                android:background="@color/black"
                android:layout_marginBottom="@dimen/_16sdp"/>


        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_details_call_dealer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:text="@string/string_call_dealer"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:background="@android:color/holo_blue_dark"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>